--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.6.0",
+    "@aws-sdk/client-s3": "^3.554.0",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
+    "nanoid": "^5.0.7",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
