--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "updated-react-flying-item": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "20.12.6",
