--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "stripe": "^17.1.0",
     "updated-react-flying-item": "^1.0.2"
   },
   "devDependencies": {
